# maia

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-test.yml  tests.yml
core/: agent.py  message.py  session.py
dashboard/: example-raw.html  example.html  multi_agent_dashboard_v2.html  package-lock.json  package.json  tailwind.config.ts  types.ts
dashboard-cli/: package.json
dashboard/app/: globals.css  page.tsx
dashboard/components/: ReportView.tsx  RunList.tsx  TestView.tsx
framework/: README.md  logging_config.py  pyproject.toml  test_hallucination_assertion.json  test_result_example.json
framework/core/: agent.py  communication_bus.py  message.py  session.py
framework/providers/: base.py  existing.py  litellm_base.py  mock.py
framework/src/maia_test_framework/: config.py  logging_config.py  pytest_plugin.py
framework/src/maia_test_framework/core/: agent.py  communication_bus.py  exceptions.py  judge_agent.py  message.py  orchestration_agent.py  session.py
framework/src/maia_test_framework/core/tools/: base.py
framework/src/maia_test_framework/core/types/: judge_result.py  orchestration_policy.py
framework/src/maia_test_framework/providers/: base.py  crewai.py  existing.py  generic_lite_llm.py  langchain.py  litellm_base.py  mock.py  ollama.py
framework/src/maia_test_framework/testing/: base.py
framework/src/maia_test_framework/testing/assertions/: agents_participation.py  base.py  content_patterns.py
framework/src/maia_test_framework/testing/mixin/: provider_mixin.py
framework/src/maia_test_framework/testing/validators/: agent.py  conversation.py  performance.py
framework/src/maia_test_framework/utils/: network.py
framework/testing/: base.py
framework/testing/assertions/: agents_participation.py  content_patterns.py
framework/testing/mixin/: provider_mixin.py
framework/testing/validators/: base.py  conversation.py
framework/tests/basic/: test_content_assertions.py  test_conversation_sessions.py  test_existing_provider.py  test_judge_agent.py  test_mock_provider.py  test_tool_usage.py  test_validators.py
framework/tests/integrations/: test_crewai.py  test_langchain.py
framework/tests/tools/: weather_api.py
framework/utils/: network.py
providers/: base.py  existing.py  generic_lite_llm.py  litellm_base.py  mock.py  ollama.py
testing/: base.py  config.py  maia_config.py
testing/assertions/: agents_participation.py  content_patterns.py
testing/validators/: base.py  conversation.py
tests/: conftest.py  maia_test_config.template.yaml
tests/basic/: test_content_assertions.py  (+4 more)
(+16 files in other folders)
