[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maia-test-framework"
version = "0.8.0"
description = "A pytest-based framework for testing multi AI agents system. It provides a flexible and extensible platform for creating and running complex multi-agent simulations and capturing the results."
authors = [{name = "Radosław Szymkiewicz", email = "szymkiewicz.radoslaw@gmail.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ai", "agents", "testing", "llm", "multi-agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pydantic-settings>=2.8.1",
    "httpx>=0.28.1",
    "structlog>=25.2.0",
    "litellm>=1.74.9",
    "pytest-json-report>=1.5.0",
    "pytest",
    "pytest-json-report"
]

[project.optional-dependencies]
dev = [
    "pytest-json-report>=1.5.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
integrations = [
    "langchain>=0.0.350",
    "langchain-ollama>=0.3.7",
    "crewai>0.165.0"
]

[project.urls]
Homepage = "https://github.com/radoslaw-sz/maia"
Documentation = "https://github.com/radoslaw-sz/maia"
Repository = "https://github.com/radoslaw-sz/maia"
Issues = "https://github.com/radoslaw-sz/maia/issues"

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "multiagent: Multi-agent integration tests",
]
asyncio_mode = "auto"

[project.entry-points.pytest11]
maia = "maia_test_framework.pytest_plugin"